--- a/PaginaSupercoches/PaginaSupercoches.html
+++ b/PaginaSupercoches/PaginaSupercoches.html
@@ -18,7 +18,7 @@
         <nav class="nav1">
             <ul class="menu">
                 <li>
-                    <a href="../PaginaPrincipal.html">INICIO</a>
+                    <a href="../index.html">INICIO</a>
                 </li>
 
                 <li>
