--- a/PaginaInicioSesion/InicioSesion.html
+++ b/PaginaInicioSesion/InicioSesion.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>CAR-MANÍA</h1>
+    <h1><a href="../index.html">CAR-MANÍA</a></h1>
     <a name="pag7"></a>
 
     <div class="container">
@@ -29,7 +29,7 @@
         </form>
     </div>
     
-     <a href="../index.html">INICIO</a>
+     
 
    
 
